изменяет класс у li
преимущества

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          <section class="advantages">
             <h2 class="visually-hidden">Преимущества</h2>
             <ul class="advantages-list">
-               <li class="advantages-item">
+               <li class="advantages-item-1">
                   <div class="advantages-item-city">Настоящий городок</div>
                   <div clsss="advantages-numb">— №1 —</div>
                   <div class=”advantages-description-life”>Седона — не аттракцион для туристов, там течёт своя жизнь</div>
@@ -54,19 +54,19 @@
                     <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
                   </div>
                </li>
-               <li class="advantages-item">
+               <li class="advantages-item-2">
                   <div class="advantages-item-home">Жильё</div>
                   <div class=”advantages-description-hotel”>Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
                </li>
-               <li class="advantages-item">
+               <li class="advantages-item-3">
                   <div class="advantages-item-meal">Еда</div>
                   <div class=”advantages-description-burger”>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</div>
                </li>
-               <li class="advantages-item">
+               <li class="advantages-item-4">
                   <div class="advantages-item-souvenirs">Сувениры</div>
                   <div class=”advantages-description-local”>Не только китайского, но и настоящего местного производства!</div>
                </li>
-               <li class="advantages-item">
+               <li class="advantages-item-5">
                   <div class="advantages-item-bridge">Там есть мост дьявола</div>
                   <div class="advantages-numb">— №2 —</div>
                   <div class=”advantages-description-go”>Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>
@@ -74,17 +74,17 @@
                     <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
                   </div>
                </li>
-               <li class="advantages-item">
+               <li class="advantages-item-6">
                   <div class="advantages-item-space">Небольшая площадь</div>
                   <div class="advantages-numb numb-color">— №3 —</div>
                   <div class=”advantages-description-close”>Все достопримечательности находятся очень близко</div>
                </li>
-               <li class="advantages-item">
+               <li class="advantages-item-7">
                   <div class="advantages-item-road">Красивая дорога</div>
                   <div class="advantages-numb numb-color">— №4 —</div>
                   <div class=”advantages-description-not-boring”>Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
                </li>
-               <li class="advantages-item">
+               <li class="advantages-item-8">
                   <div class="advantages-item-rew">Мало туристов</div>
                   <div class="advantages-numb numb-color">— №5 —</div>
                   <div class=”advantages-description-most”>Большинство едет в Гранд Каньон и толпится там</div>
