--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <ul class="advantages-list">
                <li class="advantages-item-1">
                   <div class="advantages-item-city">Настоящий городок</div>
-                  <div clsss="advantages-numb">— №1 —</div>
+                  <div clsss="advantages-numb numb-color">— №1 —</div>
                   <div class=”advantages-description-life”>Седона — не аттракцион для туристов, там течёт своя жизнь</div>
                   <div class="advantages-image-city">
                     <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
@@ -68,7 +68,7 @@
                </li>
                <li class="advantages-item-5">
                   <div class="advantages-item-bridge">Там есть мост дьявола</div>
-                  <div class="advantages-numb">— №2 —</div>
+                  <div class="advantages-numb numb-color">— №2 —</div>
                   <div class=”advantages-description-go”>Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>
                   <div class="advantages-image-bridge"></div>
                     <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
@@ -76,17 +76,17 @@
                </li>
                <li class="advantages-item-6">
                   <div class="advantages-item-space">Небольшая площадь</div>
-                  <div class="advantages-numb numb-color">— №3 —</div>
+                  <div class="advantages-numb">— №3 —</div>
                   <div class=”advantages-description-close”>Все достопримечательности находятся очень близко</div>
                </li>
                <li class="advantages-item-7">
                   <div class="advantages-item-road">Красивая дорога</div>
-                  <div class="advantages-numb numb-color">— №4 —</div>
+                  <div class="advantages-numb">— №4 —</div>
                   <div class=”advantages-description-not-boring”>Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
                </li>
                <li class="advantages-item-8">
                   <div class="advantages-item-rew">Мало туристов</div>
-                  <div class="advantages-numb numb-color">— №5 —</div>
+                  <div class="advantages-numb">— №5 —</div>
                   <div class=”advantages-description-most”>Большинство едет в Гранд Каньон и толпится там</div>
                </li>
             </ul>
