--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </ul>
          </nav>
       </header>
-      <main class="main-index">
+      <main class="main-container main-index">
          <img class="logo" src="images/welcome.svg" width="458" height="352" alt="Welcome SEDONA">
          <h1 class="main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
          <p class="main-paragraph">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
