оборачивает в div main

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
          </nav>
       </header>
       <main class="main-container main-index">
+        <div class="page-container">
          <img class="logo" src="images/welcome.svg" width="458" height="352" alt="Welcome SEDONA">
          <h1 class="main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
          <p class="main-paragraph">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -97,6 +98,7 @@
             <p class="best">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <a class="button" href="#"><b>Поиск гостиницы в Седоне</b></a>
          </section>
+        </div>
       </main>
       <section class="appointment">
          <h2 class="appointment-title">Подпишитесь на рассылку</h2>
