добавляет классы для раздела преимущества

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <link rel="stylesheet" href="styles/styles.css">
    </head>
    <body>
+     <div class="container">
       <header class="page-header">
          <nav class="navigation">
             <a class="page-logo">
@@ -55,6 +56,7 @@
                         <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
                      </div>
                   </li>
+                  <div class="advantages-items">
                   <li class="advantages-item-2">
                      <div class="advantages-item-home">Жильё</div>
                      <div class=”advantages-description-hotel”>Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
@@ -67,18 +69,21 @@
                      <div class="advantages-item-souvenirs">Сувениры</div>
                      <div class=”advantages-description-local”>Не только китайского, но и настоящего местного производства!</div>
                   </li>
+                  </div>
                   <li class="advantages-item-5">
                      <div class="advantages-item-bridge">Там есть мост дьявола</div>
                      <div class="advantages-numb numb-color">— №2 —</div>
                      <div class=”advantages-description-go”>Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>
-                     <div class="advantages-image-bridge"></div>
+                     <div class="advantages-image-bridge">
                      <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
+                    </div>
                   </li>
-                  <li class="advantages-item-6">
+                  <div class="advantages-features">
+                    <li class="advantages-item-6">
                      <div class="advantages-item-space">Небольшая площадь</div>
                      <div class="advantages-numb">— №3 —</div>
                      <div class=”advantages-description-close”>Все достопримечательности находятся очень близко</div>
-                  </li>
+                   </li>
                   <li class="advantages-item-7">
                      <div class="advantages-item-road">Красивая дорога</div>
                      <div class="advantages-numb">— №4 —</div>
@@ -89,6 +94,7 @@
                      <div class="advantages-numb">— №5 —</div>
                      <div class=”advantages-description-most”>Большинство едет в Гранд Каньон и толпится там</div>
                   </li>
+                  </div>
                </ul>
             </section>
             <section class="search">
@@ -135,5 +141,8 @@
             <img class="footer-logo" src="images/logo-html-academy.svg" width="114.9" height="32.9" alt="Логотип html-academy">
          </section>
       </footer>
+     </div>
    </body>
 </html>
+
+
