--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
          </form>
       </section>
       <footer class="page-footer">
+        <div class="page-footer-container">
          <section class="footer-socials">
             <h2 class="visually-hidden">Социальные сети</h2>
             <ul class="footer-social-list">
@@ -140,6 +141,7 @@
             <h2 class="visually-hidden">Логотип</h2>
             <img class="footer-logo" src="images/logo-html-academy.svg" width="114.9" height="32.9" alt="Логотип html-academy">
          </section>
+        </div>
       </footer>
      </div>
    </body>
