--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <h2 class="visually-hidden">Телефон</h2>
             <a class="footer-contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
          </section>
-         <section class="logo">
+         <section class="logo-html">
             <h2 class="visually-hidden">Логотип</h2>
             <img class="footer-logo" src="images/logo-html-academy.svg" width="114.9" height="32.9" alt="Логотип html-academy">
          </section>
