добавляет обертку для main и footer

--- a/catalog.html
+++ b/catalog.html
@@ -39,7 +39,8 @@
             </ul>
          </nav>
       </header>
-      <main class="main-inner">
+      <main class="main-container main-inner">
+        <div class="page-container">
          <header class="inner-header">
             <h1 class="inner-header-title">Гостиницы Седоны</h1>
             <ul class="breadcrumbs">
@@ -203,6 +204,7 @@
                <option value="cheap">4</option>
             </select>
           </div>
+        </div>
       </main>
       <section class="appointment-catalog">
          <h2 class="appointment-catalog-title">Подпишитесь на рассылку</h2>
@@ -214,6 +216,7 @@
          </form>
       </section>
       <footer class="page-footer">
+        <div class="page-footer-container">
          <section class="footer-socials">
             <h2 class="visually-hidden">Социальные сети</h2>
             <ul class="footer-social-list">
@@ -236,6 +239,7 @@
             <h2 class="visually-hidden">Логотип</h2>
             <img class="footer-logo" src="images/logo-html-academy.svg" width="114.9" height="32.9" alt="Логотип html-academy">
          </section>
+        </div>
       </footer>
    </body>
 </html>
