добавляет обертку для body

--- a/catalog.html
+++ b/catalog.html
@@ -6,6 +6,7 @@
       <link rel="stylesheet" href="styles/styles.css">
    </head>
    <body>
+    <div class="container">
       <header class="page-header">
          <nav class="navigation">
            <a class="page-logo" href="index.html">
@@ -241,5 +242,6 @@
          </section>
         </div>
       </footer>
+    </div>
    </body>
 </html>
