--- a/catalog.html
+++ b/catalog.html
@@ -54,7 +54,8 @@
             </ul>
          </header>
          <section class="catalog-products">
-            <h2 class="visually-hidden">Фильтрация гостиниц</h2>
+           <!--временно добавим атрибут hidden, чтобы заголовок не рушил сетку-->
+            <h2 class="visually-hidden" hidden>Фильтрация гостиниц</h2>
             <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get"></form>
             <fieldset class="catalog-filter-group">
                <legend class="catalog-filter-title">Инфраструктура:</legend>
