изменяет названия стиле у фильтров

--- a/catalog.html
+++ b/catalog.html
@@ -57,7 +57,7 @@
            <!--временно добавим атрибут hidden, чтобы заголовок не рушил сетку-->
             <h2 class="visually-hidden" hidden>Фильтрация гостиниц</h2>
             <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get"></form>
-            <fieldset class="catalog-filter-group">
+            <fieldset class="catalog-filter-infrastructure">
                <legend class="catalog-filter-title">Инфраструктура:</legend>
                <ul class="catalog-filter-list">
                   <li class="catalog-filter-item">
@@ -80,7 +80,7 @@
                   </li>
                </ul>
             </fieldset>
-            <fieldset class="catalog-filter-group">
+            <fieldset class="catalog-filter-type">
                <legend class="catalog-filter-title">Тип Жилья:</legend>
                <ul class="catalog-filter-list">
                  <li class="catalog-filter-item">
@@ -102,7 +102,7 @@
                     </label>
                  </li>
             </fieldset>
-            <fieldset class="catalog-filter-group">
+            <fieldset class="catalog-filter-price">
                <legend class="catalog-filter-title">Стоимость, ₽:</legend>
                <p>
                   <label>от<input type="text" value="0"></label>
