--- a/catalog.html
+++ b/catalog.html
@@ -42,8 +42,8 @@
          </header>
          <main class="main-container main-inner">
             <div class="page-container">
-               <header class="inner-header">
-                  <div class="container-catalog">
+              <div class="container-catalog">
+                <header class="inner-header">
                      <h1 class="inner-header-title">Гостиницы Седоны</h1>
                      <ul class="breadcrumbs">
                         <li class="breadcrumbs-item">
@@ -112,9 +112,12 @@
                    </p>
                    <div class="catalog-filter-row" min="0" max="9000"></div>
                  </fieldset>
-                 <button class="button" type="button">Применить</button>
-                 <button class="button" type="reset">Сбросить</button>
+                 <div class="button-catalog">
+                   <button class="button" type="button">Применить</button>
+                   <button class="button" type="reset">Сбросить</button>
+                 </div>
                </section>
+              </div>
                <div class="filter-menu">
                   <h2 class="filter-menu-title">Найдено гостиниц: 38</h2>
                   <select class="select-control" aria-label="Сортировка">
