--- a/catalog.html
+++ b/catalog.html
@@ -134,7 +134,7 @@
                   </a>
                </div>
                <ul class="product-list">
-                  <li class="product-card">
+                  <li class="product-card-amara">
                      <a class="product-card-link" href="#">
                         <img class="product-card-image" src="images/hotel-1-1.jpg" width="300" height="211" alt="Вид на звездное небо через ущелье коньона">
                         <h3 class="product-card-title">Amara Resort & Spa</h3>
@@ -146,7 +146,7 @@
                      <!-- Вернемся к этому блоку позже <div>звезды</div>-->
                      <div class="rating">Рейтинг: 8,5</div>
                   </li>
-                  <li class="product-card">
+                  <li class="product-card-villas">
                      <a class="product-card-link" href="#">
                         <img class="product-card-image" src="images/hotel-1-2.jpg" width="300" height="211" alt="Вид на горы в Villas at Poco Diablo">
                         <h3 class="product-card-title">Villas at Poco Diablo</h3>
@@ -158,7 +158,7 @@
                      <!-- Вернемся к этому блоку позже <div>звезды</div>-->
                      <div class="rating">Рейтинг: 9,2</div>
                   </li>
-                  <li class="product-card">
+                  <li class="product-card-desert">
                      <a class="product-card-link" href="#">
                         <img class="product-card-image" src="images/hotel-1-3.jpg" width="300" height="211" alt="Вид на горы в Desert Quail Inn">
                         <h3 class="product-card-title">Desert Quail Inn</h3>
@@ -170,7 +170,7 @@
                      <!-- Вернемся к этому блоку позже <div>звезды</div>-->
                      <div class="rating">Рейтинг: 6,9</div>
                   </li>
-                  <li class="product-card">
+                  <li class="product-card-greenTree">
                      <a class="product-card-link" href="#">
                         <img class="product-card-image" src="images/hotel-1.jpg" width="300" height="211" alt="Звездное небо и горы в GreenTree Inn">
                         <h3 class="product-card-title">GreenTree Inn</h3>
