--- a/index.html
+++ b/index.html
@@ -1,150 +1,155 @@
 <!DOCTYPE html>
 <html lang="ru">
-   <head>
-      <meta charset="utf-8">
-      <title>HTML Academy: Седона</title>
-      <link rel="stylesheet" href="styles/styles.css">
-   </head>
-   <body>
-     <div class="container">
+
+  <head>
+    <meta charset="utf-8">
+    <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
+  </head>
+
+  <body>
+    <div class="container">
       <header class="page-header">
-         <nav class="navigation">
-            <a class="page-logo">
+        <nav class="navigation">
+          <a class="page-logo">
             <img class="logo" src="images/logo.svg" width="139" height="70" alt="Логотип Седона">
-            </a>
-            <ul class="navigation-list">
-               <li class="navigation-item">
-                  <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
-               </li>
-               <li class="navigation-item">
-                  <a class="navigation-link" href="#">О Седоне</a>
-               </li>
-               <li class="navigation-item">
-                  <a class="navigation-link" href="#">Гостиницы</a>
-               </li>
-            </ul>
-            <ul class="navigation-user">
-               <li class="navigation-item">
-                  <a class="navigation-link" href="#">
-                  <span class="visually-hidden">Поиск</span>
-                  </a>
-               </li>
-               <li class="navigation-item">
-                  <a class="navigation-link" href="#">
-                  <span class="visually-hidden">Избранное</span>
-                  </a>
-               </li>
-               <li class="navigation-item">
-                  <a class="button" href="#">Хочу сюда</a>
-               </li>
-            </ul>
-         </nav>
+          </a>
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">О Седоне</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">Гостиницы</a>
+            </li>
+          </ul>
+          <ul class="navigation-user">
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">
+                <span class="visually-hidden">Поиск</span>
+              </a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">
+                <span class="visually-hidden">Избранное</span>
+              </a>
+            </li>
+            <li class="navigation-item">
+              <a class="button" href="#">Хочу сюда</a>
+            </li>
+          </ul>
+        </nav>
       </header>
       <main class="main-container main-index">
-         <div class="page-container">
-            <img class="logo" src="images/welcome.svg" width="458" height="352" alt="Welcome SEDONA">
-            <h1 class="main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-            <p class="main-paragraph">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
-            <section class="advantages">
-               <h2 class="visually-hidden">Преимущества</h2>
-               <ul class="advantages-list">
-                  <li class="advantages-item-1">
-                     <div class="advantages-item-city">Настоящий городок</div>
-                     <div clsss="advantages-numb numb-color">— №1 —</div>
-                     <div class=”advantages-description-life”>Седона — не аттракцион для туристов, там течёт своя жизнь</div>
-                     <div class="advantages-image-city">
-                        <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
-                     </div>
-                  </li>
-                  <div class="advantages-items">
-                  <li class="advantages-item-2">
-                     <div class="advantages-item-home">Жильё</div>
-                     <div class=”advantages-description-hotel”>Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
-                  </li>
-                  <li class="advantages-item-3">
-                     <div class="advantages-item-meal">Еда</div>
-                     <div class=”advantages-description-burger”>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</div>
-                  </li>
-                  <li class="advantages-item-4">
-                     <div class="advantages-item-souvenirs">Сувениры</div>
-                     <div class=”advantages-description-local”>Не только китайского, но и настоящего местного производства!</div>
-                  </li>
+        <div class="page-container">
+          <img class="logo" src="images/welcome.svg" width="458" height="352" alt="Welcome SEDONA">
+          <h1 class="main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+          <p class="main-paragraph">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+          <section class="advantages">
+            <h2 class="visually-hidden">Преимущества</h2>
+            <ul class="advantages-list">
+              <li class="advantages-item-1">
+                <div class="advantages-item-city">Настоящий городок</div>
+                <div clsss="advantages-numb numb-color">— №1 —</div>
+                <div class=”advantages-description-life”>Седона — не аттракцион для туристов, там течёт своя жизнь</div>
+                <div class="advantages-image-city">
+                  <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
+                </div>
+              </li>
+              <div class="advantages-items">
+                <li class="advantages-item-2">
+                  <div class="advantages-item-home">Жильё</div>
+                  <div class=”advantages-description-hotel”>Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
+                </li>
+                <li class="advantages-item-3">
+                  <div class="advantages-item-meal">Еда</div>
+                  <div class=”advantages-description-burger”>Всегда заказывайте топовый фирменный бургер, вы не
+                    разочаруетесь!</div>
+                </li>
+                <li class="advantages-item-4">
+                  <div class="advantages-item-souvenirs">Сувениры</div>
+                  <div class=”advantages-description-local”>Не только китайского, но и настоящего местного производства!
                   </div>
-                  <li class="advantages-item-5">
-                     <div class="advantages-item-bridge">Там есть мост дьявола</div>
-                     <div class="advantages-numb numb-color">— №2 —</div>
-                     <div class=”advantages-description-go”>Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>
-                     <div class="advantages-image-bridge">
-                     <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
-                    </div>
-                  </li>
-                  <div class="advantages-features">
-                    <li class="advantages-item-6">
-                     <div class="advantages-item-space">Небольшая площадь</div>
-                     <div class="advantages-numb">— №3 —</div>
-                     <div class=”advantages-description-close”>Все достопримечательности находятся очень близко</div>
-                   </li>
-                  <li class="advantages-item-7">
-                     <div class="advantages-item-road">Красивая дорога</div>
-                     <div class="advantages-numb">— №4 —</div>
-                     <div class=”advantages-description-not-boring”>Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
-                  </li>
-                  <li class="advantages-item-8">
-                     <div class="advantages-item-rew">Мало туристов</div>
-                     <div class="advantages-numb">— №5 —</div>
-                     <div class=”advantages-description-most”>Большинство едет в Гранд Каньон и толпится там</div>
-                  </li>
-                  </div>
-               </ul>
-            </section>
-            <section class="search">
-               <h2 class="visually-hidden">Поиск гостиницы</h2>
-               <strong class="interest">Заинтересовались?</strong>
-               <p class="best">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-               <a class="button" href="#"><b>Поиск гостиницы в Седоне</b></a>
-            </section>
-         </div>
+                </li>
+              </div>
+              <li class="advantages-item-5">
+                <div class="advantages-item-bridge">Там есть мост дьявола</div>
+                <div class="advantages-numb numb-color">— №2 —</div>
+                <div class=”advantages-description-go”>Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>
+                <div class="advantages-image-bridge">
+                  <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
+                </div>
+              </li>
+              <div class="advantages-features">
+                <li class="advantages-item-6">
+                  <div class="advantages-item-space">Небольшая площадь</div>
+                  <div class="advantages-numb">— №3 —</div>
+                  <div class=”advantages-description-close”>Все достопримечательности находятся очень близко</div>
+                </li>
+                <li class="advantages-item-7">
+                  <div class="advantages-item-road">Красивая дорога</div>
+                  <div class="advantages-numb">— №4 —</div>
+                  <div class=”advantages-description-not-boring”>Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
+                </li>
+                <li class="advantages-item-8">
+                  <div class="advantages-item-rew">Мало туристов</div>
+                  <div class="advantages-numb">— №5 —</div>
+                  <div class=”advantages-description-most”>Большинство едет в Гранд Каньон и толпится там</div>
+                </li>
+              </div>
+            </ul>
+          </section>
+          <section class="search">
+            <h2 class="visually-hidden">Поиск гостиницы</h2>
+            <strong class="interest">Заинтересовались?</strong>
+            <p class="best">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне
+            </p>
+            <a class="button" href="#"><b>Поиск гостиницы в Седоне</b></a>
+          </section>
+        </div>
       </main>
       <section class="appointment">
-         <h2 class="appointment-title">Подпишитесь на рассылку</h2>
-         <p class="appointment-paragraph">Только полезная информация и никакого спама, честное бойскаутское!</p>
-         <form class="appointment-form-email" action="https://echo.htmlacademy.ru/" method="post">
-            <label class="visually-hidden" for="appointment-email">E-mail</label>
-            <input type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
-            <button class="button" type="submit">подписаться</button>
-         </form>
+        <h2 class="appointment-title">Подпишитесь на рассылку</h2>
+        <p class="appointment-paragraph">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="appointment-form-email" action="https://echo.htmlacademy.ru/" method="post">
+          <label class="visually-hidden" for="appointment-email">E-mail</label>
+          <input type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
+          <button class="button" type="submit">подписаться</button>
+        </form>
       </section>
       <footer class="page-footer">
         <div class="page-footer-container">
-         <section class="footer-socials">
+          <section class="footer-socials">
             <h2 class="visually-hidden">Социальные сети</h2>
             <ul class="footer-social-list">
-               <li class="footer-social-item">
-                  <a class="button" href="https://vk.com/htmlacademy"></a>
-                  <span class="visually-hidden">Vkontakte</span>
-               </li>
-               <li class="footer-social-item">
-                  <a class="button" href="https://t.me/htmlacademy"></a>
-                  <span class="visually-hidden">Telegram</span>
-               </li>
-               <li class="footer-social-item">
-                  <a class="button" href="https://www.youtube.com/user/htmlacademyru"></a>
-                  <span class="visually-hidden">Youtube</span>
-               </li>
+              <li class="footer-social-item">
+                <a class="button" href="https://vk.com/htmlacademy"></a>
+                <span class="visually-hidden">Vkontakte</span>
+              </li>
+              <li class="footer-social-item">
+                <a class="button" href="https://t.me/htmlacademy"></a>
+                <span class="visually-hidden">Telegram</span>
+              </li>
+              <li class="footer-social-item">
+                <a class="button" href="https://www.youtube.com/user/htmlacademyru"></a>
+                <span class="visually-hidden">Youtube</span>
+              </li>
             </ul>
-         </section>
-         <section class="footer-contact">
+          </section>
+          <section class="footer-contact">
             <h2 class="visually-hidden">Телефон</h2>
             <a class="footer-contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-         </section>
-         <section class="logo-html">
+          </section>
+          <section class="logo-html">
             <h2 class="visually-hidden">Логотип</h2>
-            <img class="footer-logo" src="images/logo-html-academy.svg" width="115" height="33" alt="Логотип html-academy">
-         </section>
+            <img class="footer-logo" src="images/logo-html-academy.svg" width="115" height="33"
+              alt="Логотип html-academy">
+          </section>
         </div>
       </footer>
-     </div>
-   </body>
+    </div>
+  </body>
+
 </html>
-
-
