исправляет ошибку в футоре
section class="footer-contact"
пропали строчки

--- a/catalog.html
+++ b/catalog.html
@@ -247,7 +247,10 @@
               </li>
             </ul>
           </section>
-          <a class="footer-contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          <section class="footer-contact">
+            <h2 class="visually-hidden">Телефон</h2>
+            <a class="footer-contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          </section>
           <section class="logo">
             <h2 class="visually-hidden">Логотип</h2>
             <img class="footer-logo" src="images/logo-html-academy.svg" width="115" height="33"
