добавляет для див класс

--- a/catalog.html
+++ b/catalog.html
@@ -212,7 +212,7 @@
                 </a>
               </li>
             </ul>
-            <div class="">Гостиниц на странице:</div>
+            <div class="filter-pagination">Гостиниц на странице:</div>
             <select class="select-control" aria-label="Гостиниц на странице:">
               <option value="cheap">4</option>
             </select>
