--- a/catalog.html
+++ b/catalog.html
@@ -204,7 +204,7 @@
                 <a class="pagination-link" href="#">4</a>
               </li>
               <li class="pagination-item">
-                <a class="pagination-link" href="#">...</a>
+                <a class="pagination-link">...</a>
               </li>
               <li class="pagination-item">
                 <a class="pagination-link pagination-next" href="#">
