--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <section class="advantages">
             <h2 class="visually-hidden">Преимущества</h2>
             <ul class="advantages-list">
-              <li class="advantages-item-1">
+              <li class="advantages-item">
                 <div class="advantages-item-city">Настоящий городок</div>
                 <div clsss="advantages-numb numb-color">— №1 —</div>
                 <div class=”advantages-description-life”>Седона — не аттракцион для туристов, там течёт своя жизнь</div>
@@ -59,22 +59,22 @@
                 </div>
               </li>
               <div class="advantages-items">
-                <li class="advantages-item-2">
+                <li class="advantages-item">
                   <div class="advantages-item-home">Жильё</div>
                   <div class=”advantages-description-hotel”>Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
                 </li>
-                <li class="advantages-item-3">
+                <li class="advantages-item">
                   <div class="advantages-item-meal">Еда</div>
                   <div class=”advantages-description-burger”>Всегда заказывайте топовый фирменный бургер, вы не
                     разочаруетесь!</div>
                 </li>
-                <li class="advantages-item-4">
+                <li class="advantages-item">
                   <div class="advantages-item-souvenirs">Сувениры</div>
                   <div class=”advantages-description-local”>Не только китайского, но и настоящего местного производства!
                   </div>
                 </li>
               </div>
-              <li class="advantages-item-5">
+              <li class="advantages-item">
                 <div class="advantages-item-bridge">Там есть мост дьявола</div>
                 <div class="advantages-numb numb-color">— №2 —</div>
                 <div class=”advantages-description-go”>Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>
@@ -83,17 +83,17 @@
                 </div>
               </li>
               <div class="advantages-features">
-                <li class="advantages-item-6">
+                <li class="advantages-item">
                   <div class="advantages-item-space">Небольшая площадь</div>
                   <div class="advantages-numb">— №3 —</div>
                   <div class=”advantages-description-close”>Все достопримечательности находятся очень близко</div>
                 </li>
-                <li class="advantages-item-7">
+                <li class="advantages-item">
                   <div class="advantages-item-road">Красивая дорога</div>
                   <div class="advantages-numb">— №4 —</div>
                   <div class=”advantages-description-not-boring”>Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
                 </li>
-                <li class="advantages-item-8">
+                <li class="advantages-item">
                   <div class="advantages-item-rew">Мало туристов</div>
                   <div class="advantages-numb">— №5 —</div>
                   <div class=”advantages-description-most”>Большинство едет в Гранд Каньон и толпится там</div>
