--- a/index.html
+++ b/index.html
@@ -50,55 +50,50 @@
           <section class="advantages">
             <h2 class="visually-hidden">Преимущества</h2>
             <ul class="advantages-list">
-              <li class="advantages-item">
-                <div class="advantages-item-city">Настоящий городок</div>
-                <div clsss="advantages-numb numb-color">— №1 —</div>
-                <div class=”advantages-description-life”>Седона — не аттракцион для туристов, там течёт своя жизнь</div>
+              <li class="advantages-item advantages-img">
+                <div class="advantages-item-title">Настоящий городок</div>
+                <div clsss="advantages-numb">— №1 —</div>
+                <div class=”advantages-description”>Седона — не аттракцион для туристов, там течёт своя жизнь</div>
                 <div class="advantages-image-city">
                   <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
                 </div>
               </li>
-
                 <li class="advantages-item">
-                  <div class="advantages-item-home">Жильё</div>
-                  <div class=”advantages-description-hotel”>Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
+                  <div class="advantages-item-title">Жильё</div>
+                  <div class=”advantages-description”>Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
                 </li>
                 <li class="advantages-item">
-                  <div class="advantages-item-meal">Еда</div>
-                  <div class=”advantages-description-burger”>Всегда заказывайте топовый фирменный бургер, вы не
+                  <div class="advantages-item-title">Еда</div>
+                  <div class=”advantages-description”>Всегда заказывайте топовый фирменный бургер, вы не
                     разочаруетесь!</div>
                 </li>
                 <li class="advantages-item">
-                  <div class="advantages-item-souvenirs">Сувениры</div>
-                  <div class=”advantages-description-local”>Не только китайского, но и настоящего местного производства!
-                  </div>
+                  <div class="advantages-item-title">Сувениры</div>
+                  <div class=”advantages-description”>Не только китайского, но и настоящего местного производства!</div>
                 </li>
-
-              <li class="advantages-item">
-                <div class="advantages-item-bridge">Там есть мост дьявола</div>
-                <div class="advantages-numb numb-color">— №2 —</div>
-                <div class=”advantages-description-go”>Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>
+              <li class="advantages-item advantages-img">
+                <div class="advantages-item-title">Там есть мост дьявола</div>
+                <div class="advantages-numb">— №2 —</div>
+                <div class=”advantages-description”>Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>
                 <div class="advantages-image-bridge">
                   <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
                 </div>
               </li>
-
                 <li class="advantages-item">
-                  <div class="advantages-item-space">Небольшая площадь</div>
+                  <div class="advantages-item-title">Небольшая площадь</div>
                   <div class="advantages-numb">— №3 —</div>
-                  <div class=”advantages-description-close”>Все достопримечательности находятся очень близко</div>
+                  <div class=”advantages-description”>Все достопримечательности находятся очень близко</div>
                 </li>
                 <li class="advantages-item">
-                  <div class="advantages-item-road">Красивая дорога</div>
+                  <div class="advantages-item-title">Красивая дорога</div>
                   <div class="advantages-numb">— №4 —</div>
-                  <div class=”advantages-description-not-boring”>Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
+                  <div class=”advantages-description”>Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
                 </li>
                 <li class="advantages-item">
-                  <div class="advantages-item-rew">Мало туристов</div>
+                  <div class="advantages-item-title">Мало туристов</div>
                   <div class="advantages-numb">— №5 —</div>
-                  <div class=”advantages-description-most”>Большинство едет в Гранд Каньон и толпится там</div>
+                  <div class=”advantages-description”>Большинство едет в Гранд Каньон и толпится там</div>
                 </li>
-              
             </ul>
           </section>
           <section class="search">
