добавляет классы для блоков с одинаковым фоном

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
                 </div>
               </li>
-                <li class="advantages-item">
+                <li class="advantages-item color-bloc">
                   <div class="advantages-item-title">Жильё</div>
                   <div class=”advantages-description”>Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
                 </li>
@@ -67,7 +67,7 @@
                   <div class=”advantages-description”>Всегда заказывайте топовый фирменный бургер, вы не
                     разочаруетесь!</div>
                 </li>
-                <li class="advantages-item">
+                <li class="advantages-item color-bloc">
                   <div class="advantages-item-title">Сувениры</div>
                   <div class=”advantages-description”>Не только китайского, но и настоящего местного производства!</div>
                 </li>
@@ -79,17 +79,17 @@
                   <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
                 </div>
               </li>
-                <li class="advantages-item">
+                <li class="advantages-item color-bloc">
                   <div class="advantages-item-title">Небольшая площадь</div>
                   <div class="advantages-numb">— №3 —</div>
                   <div class=”advantages-description”>Все достопримечательности находятся очень близко</div>
                 </li>
-                <li class="advantages-item">
+                <li class="advantages-item color-road">
                   <div class="advantages-item-title">Красивая дорога</div>
                   <div class="advantages-numb">— №4 —</div>
                   <div class=”advantages-description”>Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
                 </li>
-                <li class="advantages-item">
+                <li class="advantages-item color-bloc">
                   <div class="advantages-item-title">Мало туристов</div>
                   <div class="advantages-numb">— №5 —</div>
                   <div class=”advantages-description”>Большинство едет в Гранд Каньон и толпится там</div>
