--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
             <h2 class="visually-hidden">Преимущества</h2>
             <ul class="advantages-list">
               <li class="advantages-item advantages-img">
-                <div class="advantages-item-title">Настоящий городок</div>
-                <div clsss="advantages-numb">— №1 —</div>
-                <div class=”advantages-description”>Седона — не аттракцион для туристов, там течёт своя жизнь</div>
+                <div class="container-advantages">
+                  <h3 class="advantages-item-title">Настоящий городок</h3>
+                  <b clsss="advantages-numb">— №1 —</b>
+                  <p class=”advantages-description”>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                </div>
                 <div class="advantages-image-city">
                   <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
                 </div>
@@ -71,10 +73,12 @@
                   <div class="advantages-item-title">Сувениры</div>
                   <div class=”advantages-description”>Не только китайского, но и настоящего местного производства!</div>
                 </li>
-              <li class="advantages-item advantages-img">
-                <div class="advantages-item-title">Там есть мост дьявола</div>
-                <div class="advantages-numb">— №2 —</div>
-                <div class=”advantages-description”>Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>
+              <li class="advantages-item advantages-img advantages-row-reverse">
+                <div class="container-advantages">
+                  <h3 class="advantages-item-title">Там есть мост дьявола</h3>
+                  <b class="advantages-numb">— №2 —</b>
+                  <p class=”advantages-description”>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+                </div>
                 <div class="advantages-image-bridge">
                   <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
                 </div>
