--- a/catalog.html
+++ b/catalog.html
@@ -57,8 +57,7 @@
               </ul>
             </header>
             <section class="catalog-products">
-              <!--временно добавим атрибут hidden, чтобы заголовок не рушил сетку-->
-              <h2 class="visually-hidden" hidden>Фильтрация гостиниц</h2>
+              <h2 class="visually-hidden">Фильтрация гостиниц</h2>
               <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get"></form>
               <fieldset class="catalog-filter-infrastructure">
                 <legend class="catalog-filter-title">Инфраструктура:</legend>
