--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </header>
       <main class="main-container main-index">
         <div class="page-container">
-          <img class="logo" src="images/welcome.svg" width="458" height="352" alt="Welcome SEDONA">
+          <img class="logo-welcome" src="images/welcome.svg" width="458" height="352" alt="Welcome SEDONA">
           <h1 class="main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
           <p class="main-paragraph">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
           <section class="advantages">
@@ -61,16 +61,16 @@
                 </div>
               </li>
                 <li class="advantages-item color-bloc">
-                  <div class="advantages-item-title">Жильё</div>
+                  <div class="advantages-item-title features-icon">Жильё</div>
                   <div class=”advantages-description”>Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
                 </li>
                 <li class="advantages-item">
-                  <div class="advantages-item-title">Еда</div>
+                  <div class="advantages-item-title features-icon">Еда</div>
                   <div class=”advantages-description”>Всегда заказывайте топовый фирменный бургер, вы не
                     разочаруетесь!</div>
                 </li>
                 <li class="advantages-item color-bloc">
-                  <div class="advantages-item-title">Сувениры</div>
+                  <div class="advantages-item-title features-icon">Сувениры</div>
                   <div class=”advantages-description”>Не только китайского, но и настоящего местного производства!</div>
                 </li>
               <li class="advantages-item advantages-img advantages-row-reverse">
@@ -84,17 +84,17 @@
                 </div>
               </li>
                 <li class="advantages-item color-bloc">
-                  <div class="advantages-item-title">Небольшая площадь</div>
+                  <div class="advantages-item-title features">Небольшая площадь</div>
                   <div class="advantages-numb">— №3 —</div>
                   <div class=”advantages-description”>Все достопримечательности находятся очень близко</div>
                 </li>
                 <li class="advantages-item color-road">
-                  <div class="advantages-item-title">Красивая дорога</div>
+                  <div class="advantages-item-title features">Красивая дорога</div>
                   <div class="advantages-numb">— №4 —</div>
                   <div class=”advantages-description”>Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
                 </li>
                 <li class="advantages-item color-bloc">
-                  <div class="advantages-item-title">Мало туристов</div>
+                  <div class="advantages-item-title features">Мало туристов</div>
                   <div class="advantages-numb">— №5 —</div>
                   <div class=”advantages-description”>Большинство едет в Гранд Каньон и толпится там</div>
                 </li>
