добавляет доп класс кнопки в блоке поиск гостиниц

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <strong class="interest">Заинтересовались?</strong>
             <p class="best">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне
             </p>
-            <a class="button" href="#"><b>Поиск гостиницы в Седоне</b></a>
+            <a class="button button-search" href="#"><b>Поиск гостиницы в Седоне</b></a>
           </section>
         </div>
       </main>
