--- a/catalog.html
+++ b/catalog.html
@@ -206,9 +206,7 @@
                 <a class="pagination-link">...</a>
               </li>
               <li class="pagination-item">
-                <a class="pagination-link pagination-next" href="#">
-                  <span class="visually-hidden">10</span>
-                </a>
+                <a class="pagination-link" href="#">10</a>
               </li>
             </ul>
             <div class="filter-pagination">Гостиниц на странице:</div>
