--- a/index.html
+++ b/index.html
@@ -60,28 +60,30 @@
                   <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
                 </div>
               </li>
-                <li class="advantages-item color-bloc">
-                  <div class="advantages-item-image">
-                    <img class="image" src="images/home-icons.svg" width="75" height="72" alt="Дом">
-                  </div>
-                  <div class="advantages-item-title advantages-city">Жильё</div>
-                  <div class="advantages-description description-city">Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
-                </li>
-                <li class="advantages-item">
-                  <div class="advantages-item-image">
-                    <img class="image" src="images/food-icons.svg" width="74" height="70" alt="Бургер">
-                  </div>
-                  <div class="advantages-item-title advantages-city">Еда</div>
-                  <div class="advantages-description description-city">Всегда заказывайте топовый фирменный бургер, вы не
-                    разочаруетесь!</div>
-                </li>
-                <li class="advantages-item color-bloc">
-                  <div class="advantages-item-image">
-                    <img class="image" src="images/souvenirs-icons.svg" width="64" height="76" alt="Подарок">
-                  </div>
-                  <div class="advantages-item-title advantages-city">Сувениры</div>
-                  <div class="advantages-description description-city">Не только китайского, но и настоящего местного производства!</div>
-                </li>
+              <li class="advantages-item color-bloc">
+                <div class="advantages-item-image">
+                  <img class="image" src="images/home-icons.svg" width="75" height="72" alt="Дом">
+                </div>
+                <div class="advantages-item-title advantages-city">Жильё</div>
+                <div class="advantages-description description-city">Рекомендуем пожить в настоящем мотеле, всё как в
+                  кино!</div>
+              </li>
+              <li class="advantages-item">
+                <div class="advantages-item-image">
+                  <img class="image" src="images/food-icons.svg" width="74" height="70" alt="Бургер">
+                </div>
+                <div class="advantages-item-title advantages-city">Еда</div>
+                <div class="advantages-description description-city">Всегда заказывайте топовый фирменный бургер, вы не
+                  разочаруетесь!</div>
+              </li>
+              <li class="advantages-item color-bloc">
+                <div class="advantages-item-image">
+                  <img class="image" src="images/souvenirs-icons.svg" width="64" height="76" alt="Подарок">
+                </div>
+                <div class="advantages-item-title advantages-city">Сувениры</div>
+                <div class="advantages-description description-city">Не только китайского, но и настоящего местного
+                  производства!</div>
+              </li>
               <li class="advantages-item advantages-img advantages-row-reverse">
                 <div class="container-advantages">
                   <h3 class="advantages-item-title">Там есть<br>мост дьявола</h3>
@@ -92,21 +94,24 @@
                   <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
                 </div>
               </li>
-                <li class="advantages-item color-bloc">
-                  <div class="advantages-item-title advantages-content">Небольшая<br>площадь</div>
-                  <div class="advantages-numb">— №3 —</div>
-                  <div class="advantages-description description-square">Все достопримечательности<br>находятся очень близко</div>
-                </li>
-                <li class="advantages-item color-road">
-                  <div class="advantages-item-title advantages-content">Красивая<br>дорога</div>
-                  <div class="advantages-numb">— №4 —</div>
-                  <div class="advantages-description description-square">Ехать в Седону из Лас-Вегаса<br>совсем не скучно!</div>
-                </li>
-                <li class="advantages-item color-bloc">
-                  <div class="advantages-item-title advantages-content">Мало<br>туристов</div>
-                  <div class="advantages-numb">— №5 —</div>
-                  <div class="advantages-description description-square">Большинство едет в Гранд<br>Каньон и толпится там</div>
-                </li>
+              <li class="advantages-item color-bloc">
+                <div class="advantages-item-title advantages-content">Небольшая<br>площадь</div>
+                <div class="advantages-numb">— №3 —</div>
+                <div class="advantages-description description-square">Все достопримечательности<br>находятся очень
+                  близко</div>
+              </li>
+              <li class="advantages-item color-road">
+                <div class="advantages-item-title advantages-content">Красивая<br>дорога</div>
+                <div class="advantages-numb">— №4 —</div>
+                <div class="advantages-description description-square">Ехать в Седону из Лас-Вегаса<br>совсем не скучно!
+                </div>
+              </li>
+              <li class="advantages-item color-bloc">
+                <div class="advantages-item-title advantages-content">Мало<br>туристов</div>
+                <div class="advantages-numb">— №5 —</div>
+                <div class="advantages-description description-square">Большинство едет в Гранд<br>Каньон и толпится там
+                </div>
+              </li>
             </ul>
           </section>
           <section class="search">
