исправляет bloc на block

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
                 </div>
               </li>
-              <li class="advantages-item color-bloc">
+              <li class="advantages-item color-block">
                 <div class="advantages-item-image">
                   <img class="image" src="images/home-icons.svg" width="75" height="72" alt="Дом">
                 </div>
