--- a/catalog.html
+++ b/catalog.html
@@ -135,7 +135,7 @@
             </a>
           </div>
           <ul class="product-list">
-            <li class="product-card-amara">
+            <li class="product-card">
               <a class="product-card-link" href="#">
                 <img class="product-card-image" src="images/hotel-1-1.jpg" width="300" height="211"
                   alt="Вид на звездное небо через ущелье коньона">
@@ -148,7 +148,7 @@
               <!-- Вернемся к этому блоку позже <div>звезды</div>-->
               <div class="rating">Рейтинг: 8,5</div>
             </li>
-            <li class="product-card-villas">
+            <li class="product-card">
               <a class="product-card-link" href="#">
                 <img class="product-card-image" src="images/hotel-1-2.jpg" width="300" height="211"
                   alt="Вид на горы в Villas at Poco Diablo">
@@ -161,7 +161,7 @@
               <!-- Вернемся к этому блоку позже <div>звезды</div>-->
               <div class="rating">Рейтинг: 9,2</div>
             </li>
-            <li class="product-card-desert">
+            <li class="product-card">
               <a class="product-card-link" href="#">
                 <img class="product-card-image" src="images/hotel-1-3.jpg" width="300" height="211"
                   alt="Вид на горы в Desert Quail Inn">
@@ -174,7 +174,7 @@
               <!-- Вернемся к этому блоку позже <div>звезды</div>-->
               <div class="rating">Рейтинг: 6,9</div>
             </li>
-            <li class="product-card-greenTree">
+            <li class="product-card">
               <a class="product-card-link" href="#">
                 <img class="product-card-image" src="images/hotel-1.jpg" width="300" height="211"
                   alt="Звездное небо и горы в GreenTree Inn">
