задает обертку для элементов карточки товаров

--- a/catalog.html
+++ b/catalog.html
@@ -145,12 +145,14 @@
               <a class="product-card-title-link" href="#">
                 <h3 class="product-card-title">Amara Resort & Spa</h3>
               </a>
-              <div>Гостиница</div>
-              <div>От 4000 ₽</div>
-              <a class="button-detailed" href="#">подробнее</a>
-              <a class="button-favourites" href="#">в избранное</a>
+              <div class="inner-description">
+                <p class="description-title">Гостиница</p>
+                <p class="description-price">От 4000 ₽</p>
+                <a class="button-detailed" href="#">подробнее</a>
+                <a class="button-favourites" href="#">в избранное</a>
               <!-- Вернемся к этому блоку позже <div>звезды</div>-->
-              <div class="rating">Рейтинг: 8,5</div>
+              <p class="rating">Рейтинг: 8,5</p>
+              </div>
               </div>
             </li>
             <li class="product-card">
@@ -162,12 +164,14 @@
               <a class="product-card-title-link" href="#">
                 <h3 class="product-card-title">Villas at Poco Diablo</h3>
               </a>
-              <div>Гостиница</div>
-              <div>От 5000 ₽</div>
+              <div class="inner-description">
+              <p class="description-title">Гостиница</p>
+              <p class="description-price">От 5000 ₽</p>
               <a class="button-detailed" href="#">подробнее</a>
               <a class="button-favourites" href="#">в избранное</a>
               <!-- Вернемся к этому блоку позже <div>звезды</div>-->
-              <div class="rating">Рейтинг: 9,2</div>
+              <p class="rating">Рейтинг: 9,2</p>
+              </div>
               </div>
             </li>
             <li class="product-card">
@@ -179,12 +183,14 @@
               <a class="product-card-title-link" href="#">
                 <h3 class="product-card-title">Desert Quail Inn</h3>
               </a>
-              <div>Гостиница</div>
-              <div>От 2500 ₽</div>
+              <div class="inner-description">
+              <p class="description-title">Гостиница</p>
+              <p class="price">От 2500 ₽</p>
               <a class="button-detailed" href="#">подробнее</a>
               <a class="button-favourites" href="#">в избранное</a>
               <!-- Вернемся к этому блоку позже <div>звезды</div>-->
-              <div class="rating">Рейтинг: 6,9</div>
+              <p class="rating">Рейтинг: 6,9</p>
+              </div>
               </div>
             </li>
             <li class="product-card">
@@ -196,13 +202,15 @@
               <a class="product-card-title-link" href="#">
                 <h3 class="product-card-title">GreenTree Inn</h3>
               </a>
-              <div>Гостиница</div>
-              <div>От 1500 ₽</div>
+              <div class="inner-description">
+              <p class="description-title">Гостиница</p>
+              <p class="price">От 1500 ₽</p>
               <a class="button-detailed" href="#">подробнее</a>
               <a class="button-favourites" href="#">в избранное</a>
               <!-- Вернемся к этому блоку позже <div>звезды</div>-->
-              <div class="rating">Рейтинг: 5,0</div>
+              <p class="rating">Рейтинг: 5,0</p>
               </div>
+            </div>
             </li>
           </ul>
         </div>
