добавляет обертку для logo-welcome

--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@
       </header>
       <main class="main-container main-index">
         <div class="page-container">
-          <img class="logo-welcome" src="images/welcome.svg" width="458" height="352" alt="Welcome SEDONA">
-          <h1 class="main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-          <p class="main-paragraph">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+          <div class="container-logo">
+            <img class="logo-welcome" src="images/welcome.svg" width="458" height="352" alt="Welcome SEDONA">
+          </div>
+          <div class="container-title">
+            <h1 class="main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+            <p class="main-paragraph">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+          </div>
           <section class="advantages">
             <h2 class="visually-hidden">Преимущества</h2>
             <ul class="advantages-list">
