--- a/catalog.html
+++ b/catalog.html
@@ -165,7 +165,7 @@
                   <p class="description-title">Гостиница</p>
                   <p class="description-price">От 5000 ₽</p>
                   <a class="button-detailed" href="#">подробнее</a>
-                  <a class="button-favourites" href="#">в избранное</a>
+                  <a class="button-favourites button-favourites-current" href="#">в избранном</a>
                   <!-- Вернемся к этому блоку позже <div>звезды</div>-->
                   <p class="rating">Рейтинг: 9,2</p>
                 </div>
