добавляет в разметку блок со звездами

--- a/catalog.html
+++ b/catalog.html
@@ -149,7 +149,7 @@
                   <p class="description-price">От 4000 ₽</p>
                   <a class="button-detailed" href="#">подробнее</a>
                   <a class="button-favourites" href="#">в избранное</a>
-                  <!-- Вернемся к этому блоку позже <div>звезды</div>-->
+                  <span class="product-stars"></span>
                   <p class="rating">Рейтинг: 8,5</p>
                 </div>
               </li>
@@ -166,7 +166,7 @@
                   <p class="description-price">От 5000 ₽</p>
                   <a class="button-detailed" href="#">подробнее</a>
                   <a class="button-favourites button-favourites-current" href="#">в избранном</a>
-                  <!-- Вернемся к этому блоку позже <div>звезды</div>-->
+                  <span class="product-stars"></span>
                   <p class="rating">Рейтинг: 9,2</p>
                 </div>
               </li>
@@ -183,7 +183,7 @@
                   <p class="price">От 2500 ₽</p>
                   <a class="button-detailed" href="#">подробнее</a>
                   <a class="button-favourites" href="#">в избранное</a>
-                  <!-- Вернемся к этому блоку позже <div>звезды</div>-->
+                  <span class="product-stars"></span>
                   <p class="rating">Рейтинг: 6,9</p>
                 </div>
               </li>
@@ -200,7 +200,7 @@
                   <p class="price">От 1500 ₽</p>
                   <a class="button-detailed" href="#">подробнее</a>
                   <a class="button-favourites" href="#">в избранное</a>
-                  <!-- Вернемся к этому блоку позже <div>звезды</div>-->
+                  <span class="product-stars"></span>
                   <p class="rating">Рейтинг: 5,0</p>
                 </div>
               </li>
