изменяет классы в блоке сортировки

--- a/catalog.html
+++ b/catalog.html
@@ -129,14 +129,16 @@
             </section>
           </div>
           <div class="filter-menu">
-            <h2 class="filter-menu-title">Найдено гостиниц: 38</h2>
-            <select class="select-control" aria-label="Сортировка">
-              <option value="cheap">Сначала дешёвые</option>
-            </select>
+            <div class="select sorting-type">
+              <h2 class="filter-menu-title">Найдено гостиниц: 38</h2>
+              <select class="select-control" aria-label="Сортировка">
+                <option value="cheap">Сначала дешёвые</option>
+              </select>
+            </div>
             <a class="button" href="#">
               <span class="visually-hidden">Показать карточки</span>
             </a>
-            <a href="#" class="button button-light">
+            <a class="button button-light" href="#">
               <span class="visually-hidden">Показать слайд</span>
             </a>
             <a class="button" href="#">
