добавляет обертку для фильтра в пагинации

--- a/catalog.html
+++ b/catalog.html
@@ -247,10 +247,12 @@
                 <a class="pagination-link" href="#">10</a>
               </li>
             </ul>
-            <div class="filter-pagination">Гостиниц на странице:</div>
-            <select class="select-control" aria-label="Гостиниц на странице:">
-              <option value="cheap">4</option>
-            </select>
+            <div class="filter-pagination">
+              <p class="filter-pagination-title">Гостиниц на странице:</p>
+              <select class="pagination-select-control" aria-label="Гостиниц на странице:">
+                <option value="cheap">4</option>
+              </select>
+            </div>
           </div>
         </div>
       </main>
