задает еще класс для кнопки подписка

--- a/catalog.html
+++ b/catalog.html
@@ -262,7 +262,7 @@
         <form class="appointment-catalog-form-email" action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="appointment-email">E-mail</label>
           <input type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
-          <button class="button" type="submit">подписаться</button>
+          <button class="button button-appointment" type="submit">подписаться</button>
         </form>
       </section>
       <footer class="page-footer">
