еще исправляет опечатку у класса преимуществ

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="advantages-description description-city">Всегда заказывайте топовый фирменный бургер, вы не
                   разочаруетесь!</div>
               </li>
-              <li class="advantages-item color-bloc">
+              <li class="advantages-item color-block">
                 <div class="advantages-item-image">
                   <img class="image" src="images/souvenirs-icons.svg" width="64" height="76" alt="Подарок">
                 </div>
