добавляет visually-hidden для чекбоксов и радиокнопок

--- a/catalog.html
+++ b/catalog.html
@@ -84,19 +84,23 @@
                 <ul class="catalog-filter-list">
                   <li class="catalog-filter-item">
                     <label class="control">
-                      <input class="control-input" type="checkbox" name="бассейн" value="pool" checked>
+                      <input class="visually-hidden control-input" type="checkbox" name="бассейн" value="pool" checked>
+                      <span class="control-mark"></span>
                       <span class="control-span">Бассейн</span>
                     </label>
                   </li>
                   <li class="catalog-filter-item">
                     <label class="control">
-                      <input class="control-input" type="checkbox" name="парковка" value="parking" checked>
+                      <input class="visually-hidden control-input" type="checkbox" name="парковка" value="parking" checked>
+                      <span class="control-mark">
+                      </span>
                       <span class="control-span">Парковка</span>
                     </label>
                   </li>
                   <li class="catalog-filter-item">
                     <label class="control">
-                      <input class="control-input" type="checkbox" name="wi-fi" value="wi-fi">
+                      <input class="visually-hidden control-input" type="checkbox" name="wi-fi" value="wi-fi">
+                      <span class="control-mark"></span>
                       <span class="control-span">Wi-fi</span>
                     </label>
                   </li>
@@ -107,19 +111,23 @@
                 <ul class="catalog-filter-list">
                   <li class="catalog-filter-item">
                     <label class="control">
-                      <input class="control-input" type="radio" name="type of housing" value="hotel" checked>
+                      <input class="visually-hidden control-input" type="radio" name="type of housing" value="hotel" checked>
+                      <span class="control-mark"></span>
                       <span class="control-span">Гостиница</span>
                     </label>
                   </li>
                   <li class="catalog-filter-item">
                     <label class="control">
-                      <input class="control-input" type="radio" name="type of housing" value="motel">
+                      <input class="visually-hidden control-input" type="radio" name="type of housing" value="motel">
+                      <span class="control-mark">
+                      </span>
                       <span class="control-span">Мотель</span>
                     </label>
                   </li>
                   <li class="catalog-filter-item">
                     <label class="control">
-                      <input class="control-input" type="radio" name="type of housing" value="apartments">
+                      <input class="visually-hidden control-input" type="radio" name="type of housing" value="apartments">
+                      <span class="control-mark"></span>
                       <span class="control-span">Апартаменты</span>
                     </label>
                   </li>
