позиционирует кнопки в фильтрах каталога

--- a/catalog.html
+++ b/catalog.html
@@ -159,8 +159,8 @@
                 </div>
               </fieldset>
               <div class="button-catalog">
-                <button class="button" type="button">Применить</button>
-                <button class="button" type="reset">Сбросить</button>
+                <button class="button button-apply" type="button">Применить</button>
+                <button class="button button-off" type="reset">Сбросить</button>
               </div>
             </section>
           </div>
