изменяет в разметке h2 на span

--- a/catalog.html
+++ b/catalog.html
@@ -165,12 +165,12 @@
             </section>
           </div>
           <div class="filter-menu">
-            <div class="select sorting-type">
-              <h2 class="filter-menu-title">Найдено гостиниц: 38</h2>
-              <select class="select-control" aria-label="Сортировка">
-                <option value="cheap">Сначала дешёвые</option>
-              </select>
-            </div>
+              <span class="filter-menu-title">Найдено гостиниц: 38</span>
+              <div class="select sorting-type">
+                <select class="select-control" aria-label="Сортировка">
+                  <option value="cheap">Сначала дешёвые</option>
+                </select>
+              </div>
             <a class="button button-current" href="#">
               <span class="visually-hidden">Показать карточки</span>
               <svg width="16" height="14" viewBox="0 0 16 14" xmlns="http://www.w3.org/2000/svg">
