добавляет br для заголовка

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <img class="logo-welcome" src="images/welcome.svg" width="458" height="352" alt="Welcome SEDONA">
           </div>
           <div class="container-title">
-            <h1 class="main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+            <h1 class="main-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h1>
             <p class="main-paragraph">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
           </div>
           <section class="advantages">
