создает разметку подложки и модальное окно

--- a/index.html
+++ b/index.html
@@ -209,6 +209,11 @@
         </div>
       </footer>
     </div>
+    <div class="modal-container">
+      <div class="modal modal-search">
+
+      </div>
+    </div>
   </body>
 
 </html>
